--- a/.github/workflows/go_application.yml
+++ b/.github/workflows/go_application.yml
@@ -1,10 +1,11 @@
 name: Go Application all-in one
 
-on: workflow_call
+on: 
+  workflow_call:
 
 jobs:
   build:
-    name: building...
+    name: building
     runs-on: ubuntu-latest
     steps:
       - name: build
